tests/snapshots/examples_fixtures/type_system__failing__191_contextual_effect_missing_module_call_e400.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/191_contextual_effect_missing_module_call_e400.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `TypeSystem.EffectsChain` to import.

  examples/type_system/failing/191_contextual_effect_missing_module_call_e400.flx:3:1
  |
3 | import TypeSystem.EffectsChain
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `TypeSystem.EffectsChain.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `TypeSystem.EffectsChain` under roots: examples/type_system/failing, src, lib (imported from examples/type_system/failing/191_contextual_effect_missing_module_call_e400.flx).
== stdout ==
<not executed>
